[workspace]
members = ["crates/rpc", "crates/core"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = [
    "Abdelhamid Bakhta <@abdelhamidbakhta>",
    "Elias Tazartes <@eikix>",
    "Clement Walter <@clementwalter>",
    "Gregory Edison <@greged93>",
    "Johann Bestowrous <@jobez>",
    "Harsh Bajpai <@bajpai244>",
    "Danilo Kim <@danilowhk>",
]
description = "RPC node for the Kakarot zk EVM"
homepage = "https://github.com/kkrt-labs"
repository = "https://github.com/kkrt-labs/kakarot-rpc"
readme = "./README.md"
license = "MIT"

[workspace.dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "dev/cairo_2_abi" }
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "a4c78ff" }  
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "fb710e5" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "fb710e5" }
reth-rlp = { git = "https://github.com/paradigmxyz/reth.git", rev = "fb710e5" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "fb710e5" }
async-trait = "0.1.58"
jsonrpsee = { version = "0.18.2", features = ["full"] }
blockifier = { git = "https://github.com/dojoengine/blockifier", branch = "main" }  

[patch."https://github.com/starkware-libs/blockifier"]
blockifier = { git = "https://github.com/dojoengine/blockifier", branch = "main" }
  
[patch.crates-io]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "dev/cairo_2_abi" }
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "dev/cairo_2_abi" } 
cairo-felt = { git = "https://github.com/dojoengine/cairo-rs.git", branch = "main" }
cairo-vm = { git = "https://github.com/dojoengine/cairo-rs.git", branch = "main" }
dojo-test-utils = { git = "https://github.com/jobez/dojo.git", branch = "fix/requiring_dojo_test_utils" }  
